fix replacing expr nodes