@@ -55,7 +55,7 @@ class PyFloatConstant extends Constant implements ClassConstants, Opcodes {
 
     @Override
     void get(Code c) throws IOException {
-        c.ldc(new Double(value));
+        c.ldc(Double.valueOf(value));
         c.invokestatic(p(Py.class), "newFloat", sig(PyFloat.class, Double.TYPE));
     }
 
@@ -90,7 +90,7 @@ class PyComplexConstant extends Constant implements ClassConstants, Opcodes {
 
     @Override
     void get(Code c) throws IOException {
-        c.ldc(new Double(value));
+        c.ldc(Double.valueOf(value));
         c.invokestatic(p(Py.class), "newImaginary", sig(PyComplex.class, Double.TYPE));
     }
 
